Fix theme widget select behavior on iOS

--- a/src/ui/components/login/theme_widget.scss
+++ b/src/ui/components/login/theme_widget.scss
@@ -10,6 +10,11 @@
     z-index: 100;
     height: 2.9em;
 
+    * {
+        user-select: none;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }
+
     .ln-enable-motion {
         transition: width 500ms ease-in;
     }
